# danacita

./: .gitignore  README.md  pyproject.toml
danacita_analytics/: README.md  dbt_project.yml
danacita_analytics/models/: sources.yml
danacita_analytics/models/dm/: d_calendar.sql  d_currency.sql  dm.yaml  f_loanbook.sql
danacita_analytics/models/stg/: staging.yml  stg_fx_rates.sql  stg_loanbook.sql
danacita_analytics/seeds/: src_fx_rate_cleaned.csv  src_loanbook.csv
data/: fx rate data (updated every EOM).xlsx  loanbook_onlyforreference.xlsx
ingest/: ingest_fx.py  ingest_loan_book.py
